--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ h1 {
     padding: .67em 0;
 }
 
+kbd {
+    background-color: #fff3;
+    border-radius: 2px;
+    border: 1px solid #aaa;
+}
+
 svg {
     position: absolute;
     top: 0;
