--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ h1 {
 }
 
 kbd {
-    background-color: #fff3;
-    border: 1px solid #aaa;
+    background-color: #0003;
+    border: 1px solid #222;
     border-radius: 2px;
 }
 
