--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     outline: none;
 }
 
-html, body, #mouseBox, #settings-wrapper {
+html, body, #mouseBox, #settings {
     width: 100%;
     height: 100%;
     margin: 0;
