--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header {
 }
 
 header h1 {
-    font-size: 0em;
+    font-size: 0;
     margin: 0 10px;
     transform: translateY(-100%);
     transition: transform .5s;
@@ -290,7 +290,7 @@ input:not(:checked) + label .checkbox .on {
 }
 
 #myProgress {
-    width: 0%;
+    width: 0;
     max-width: 100%;
     height: 100%;
     background-color: #222;
@@ -379,8 +379,8 @@ input:not(:checked) + label .checkbox .on {
     right: 50%;
     position: absolute;
     content: "";
-    border-top: 0px solid white;
-    border-left: 0px solid transparent;
+    border-top: 0 solid white;
+    border-left: 0 solid transparent;
     transition: all .3s;
     pointer-events: none;
 }
@@ -541,7 +541,7 @@ fieldset {
     user-select: text;
 }
 
-.hasinfo {
+.hasInfo {
     cursor: pointer;
 }
 
@@ -568,8 +568,8 @@ fieldset {
 }
 
 /* Goals */
-#timepassed {
-    width: 0%;
+#timePassed {
+    width: 0;
     height: 16px;
     background-color: #9d9;
     position: absolute;
@@ -578,8 +578,8 @@ fieldset {
     z-index: -1;
 }
 
-#timeleft {
-    width: 0%;
+#timeLeft {
+    width: 0;
     height: 10px;
     background-color: #444;
     position: absolute;
@@ -601,7 +601,7 @@ fieldset {
 }
 
 #diff {
-    width: 0%;
+    width: 0;
     height: 12px;
     background-color: #6af5;
     position: absolute;
